--- a/cadastro.html
+++ b/cadastro.html
@@ -21,19 +21,19 @@
     <fieldset class="formulario">
         <div>
             <label class="pergunta">nome completo</label>
-            <input type="text" name="nome" id="nome">      
+            <input type="text" name="nome" placeholder="digite aqui seu nome completo" id="nome">      
         </div>
         <div>
             <label class="pergunta">email</label>
-            <input type="email" name="email" id="email">
+            <input type="email" name="email" id="email" placeholder="ex: agrônomo@mmm.br" autocomplete="off">
         </div>
         <div>
-            <label class="pergunta">crie aqui uma senha</label>
-            <input type="password" name="senha" id="senha">
+            <label class="pergunta">crie sua senha</label>
+            <input type="password" name="senha" placeholder="senha para uso exclusivo do agrônomo " id="senha">
         </div>
         <div>
             <label class="pergunta">celular - WhatsApp</label>
-            <input type="text" name="celular" id="celular">
+            <input type="text" name="celular" id="celular" placeholder="ex: (xx) xxxxx-xxxx">
         </div>
         <div>
             <label class="pergunta">Região do Ceará</label>
@@ -55,7 +55,7 @@
                 <option class="regiao" value="jaguaribe">Vale do Jaguaribe</option>
             </select>
         </div>
-        <input type="submit" class="retorno" value="Cadastro Criaddo"> 
+        <input type="submit" class="retorno" value="Cadastro Criado"> 
     </fieldset>   
     </form>
     </main>
